sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:17: error: not found: value l
    setValeur(l,v)
              ^AlgShellSort:17: error: not found: value v
    setValeur(l,v)
                ^